compiler/testData/cli/js/illegalJsCodeWithInlinedFunInKlib.out
warning: ATTENTION!
This build uses unsafe internal compiler arguments:

-XXLanguage:+IrIntraModuleInlinerBeforeKlibSerialization

This mode is not recommended for production use,
as no stability/compatibility guarantees are given on
compiler or generated code. Use it at your own risk!

compiler/testData/cli/js/illegalJsCodeWithInlinedFunInKlib.kt:2:8: error: JavaScript error: Invalid assignment left-hand side.
    js("this = x;")
       ^^^^^^^^^^^
COMPILATION_ERROR
